--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ junit = "4.13.2"
 kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
 kotlinxDatetime = "0.7.1"
+materialIconsExtendedDesktop = "1.7.8"
 room = "2.8.3"
 sqlite = "2.6.1"
 ksp = "2.2.20-2.0.3"
@@ -23,6 +24,7 @@ koin-compose = "1.2.0-Beta4"
 roomRuntimeAndroid = "2.8.3"
 
 [libraries]
+androidx-material-icons-extended-desktop = { module = "androidx.compose.material:material-icons-extended-desktop", version.ref = "materialIconsExtendedDesktop" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
